# trecvit

./: README.md  pyproject.toml
colabs/: trecvit_demo.ipynb
trecvit/: modules.py  trecvit_model.py  utils.py
